--- a/public/style.css
+++ b/public/style.css
@@ -5,3 +5,4 @@ div {display: flex;
     flex-direction: column;
     align-items: center;}
 audio {min-width: -webkit-fill-available;}
+img { width: 4em; }
