--- a/public/style.css
+++ b/public/style.css
@@ -5,4 +5,6 @@ div {display: flex;
     flex-direction: column;
     align-items: center;}
 audio {min-width: -webkit-fill-available;}
-img { width: 4em; }
+img { width: 4em;
+    align-self: flex-start;
+    margin-left: 2em; }
